tests/ui/form_data_builder.rs
use gotham_formdata::FormData;

#[derive(FormData)]
struct MyFormData;

struct MyFormDataFormDataBuilder;

fn main() {
}
